# pygame-qt

./: README.md  main.py  pyproject.toml
pygame_qt/: __init__.py
